@@ -26,6 +26,10 @@ AnyEvent
 
 =item *
 
+AnyEvent::Open3::Simple
+
+=item *
+
 App::Ack
 
 =item *
@@ -46,6 +50,10 @@ autodie
 
 =item *
 
+Clustericious
+
+=item *
+
 Clustericious::Client
 
 =item *
@@ -59,6 +67,10 @@ Clustericious::Log
 =item *
 
 Crypt::PasswdMD5
+
+=item *
+
+Data::Downloader
 
 =item *
 
@@ -198,6 +210,10 @@ Sereal::Decoder
 
 =item *
 
+Sereal::Encoder
+
+=item *
+
 Shell::Config::Generate
 
 =item *
@@ -259,6 +275,10 @@ Test::Pod::Spelling::CommonMistakes
 =item *
 
 Test::Spelling
+
+=item *
+
+Test::Strict
 
 =item *
 
