@@ -28,15 +28,18 @@ remove = strict
 
 [Prereqs]
 AnyEvent                                       = 0
+AnyEvent::Open3::Simple                        = 0
 App::Ack                                       = 0
 App::cpanminus                                 = 0
 App::RegexFileUtils                            = 0
 Authen::Simple                                 = 0
 autodie                                        = 0
+Clustericious                                  = 0
 Clustericious::Client                          = 0
 Clustericious::Config                          = 0
 Clustericious::Log                             = 0
 Crypt::PasswdMD5                               = 0
+Data::Downloader                               = 0
 DBD::mysqlPP                                   = 0
 DBD::PgPP                                      = 0
 DBD::SQLite                                    = 0
@@ -77,6 +80,7 @@ Rose::DB                                       = 0
 Rose::DB::Object                               = 0
 Scalar::Does                                   = 0
 Sereal::Decoder                                = 0
+Sereal::Encoder                                = 0
 Shell::Config::Generate                        = 0
 Shell::Guess                                   = 0
 String::Template                               = 0
@@ -93,6 +97,7 @@ Test::Pod                                      = 0
 Test::Pod::Coverage                            = 0
 Test::Pod::Spelling::CommonMistakes            = 0
 Test::Spelling                                 = 0
+Test::Strict                                   = 0
 TinyMake                                       = 0
 Try::Tiny                                      = 0
 URI                                            = 0
